Minor edits to reflect new numbers after rerun

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d2e4830",
+   "id": "incorrect-newark",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc8c045",
+   "id": "intimate-latter",
    "metadata": {},
    "source": [
     "**Note to TA:** The running time and peak memory usage results vary for each rerun of the notebook. Moreover, the results are also computer-dependent. The notebook was run from start to end using Peter's PC (Windows 16Gb RAM)"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1bfa71d3",
+   "id": "strategic-photographer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d722381d",
+   "id": "disturbed-marketplace",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ebc2d57",
+   "id": "ceramic-return",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f3d9f5",
+   "id": "earned-profit",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f20069e",
+   "id": "unique-dream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "85546ae5",
+   "id": "meaningful-usage",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b63224a6",
+   "id": "recent-stroke",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "251f8622",
+   "id": "strange-infrastructure",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9cbdbb2",
+   "id": "helpful-issue",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5e2c5ea7",
+   "id": "known-karen",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f3a6b216",
+   "id": "fossil-electricity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bf08870c",
+   "id": "compatible-flexibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f245259a",
+   "id": "static-sense",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6e4185ea",
+   "id": "renewable-cardiff",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "135f6129",
+   "id": "closing-diameter",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "68df5385",
+   "id": "approved-exception",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d611f84",
+   "id": "extensive-albany",
    "metadata": {
     "tags": []
    },
@@ -482,28 +482,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afa18acf",
+   "id": "motivated-concentrate",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
     "\n",
     "Machine | Peter (Windows 16Gb RAM) |Alex (Windows 8Gb RAM) |Joshua (macOS Catalina 8Gb RAM) |Rahul \n",
     "---|---|---|---|---\n",
-    "Download data - wall time| 39.4s | 12min 10s | 4min 10s\n",
-    "Unzip data - wall time| 13.6s| 22.5s | 21.4 s\n",
+    "Download data - wall time| 29.1s | 12min 10s | 4min 10s\n",
+    "Unzip data - wall time| 15.2s| 22.5s | 21.4 s\n",
     "Combine data - wall time| 6min 3s| 8 mins 16s | 7min 14s\n",
-    "Combine data - peak memory | 136.10 MiB| 93.20 MiB| 78.52 MiB\n",
-    "Read combined data - wall time | 56.6s | 1min 50s | 1min 29s"
+    "Combine data - peak memory | 136.30 MiB| 93.20 MiB| 78.52 MiB\n",
+    "Read combined data - wall time | 1min 1s | 1min 50s | 1min 29s"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a9210f62",
+   "id": "broadband-seafood",
    "metadata": {},
    "source": [
     "**Comment:**\n",
     "\n",
-    "- Peter's machine can run the task faster than Alex's and Joshua's given the bigger RAM\n",
+    "- Peter's machine can run the tasks faster than Alex's and Joshua's given the bigger RAM\n",
     "- Given the same RAM size for Alex's and Joshua's machine, MacOS seems to process and tast faster than Windows.\n",
     "- Alex's machine takes the longest to download the data.\n",
     "- Rahul was not able to run this notebook given he just moved to Vancouver and did not have the suitable laptop adapter to work on this milestone."
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dddf1e41",
+   "id": "monthly-interim",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4581b0c",
+   "id": "destroyed-electronics",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bc21902b",
+   "id": "ranking-worcester",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f81203",
+   "id": "french-reducing",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3916acc2",
+   "id": "preliminary-forward",
    "metadata": {},
    "outputs": [
     {
@@ -638,17 +638,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb49a5ca",
+   "id": "early-scanning",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
     "\n",
-    "We cut the peak memory savings from 11795.62 MiB to 9741.21 MiB by loading the data in chunks instead of loading all data at once. There is savings in running time from 55.7s to 55.1s."
+    "We cut the peak memory savings from 11657.07 MiB to 9624.98 MiB by loading the data in chunks instead of loading all data at once. There is savings in running time from 58.8 to 55.3s."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "312b8104",
+   "id": "hispanic-canal",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "283e0310",
+   "id": "blind-corner",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa0016c",
+   "id": "dated-freight",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "16df7ff2",
+   "id": "affected-rabbit",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f5c8ba",
+   "id": "focused-suffering",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "66123ebd",
+   "id": "extreme-mobile",
    "metadata": {},
    "outputs": [
     {
@@ -829,18 +829,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6936913c",
+   "id": "atmospheric-conjunction",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
-    "- By loading only the columns of interest instead of all the columns in the dataframe, we can save peak memory usage from 12302.26 MiB in 2.1 to  7220.52 MiB in 2.2. Running time is significantly reduced from 1min to 35 s.\n",
+    "- By loading only the columns of interest instead of all the columns in the dataframe, we can save peak memory usage from 11833.14 in 2.1 to  7066.39 MiB in 2.2. Running time is significantly reduced from 1min 2s to 35.8s.\n",
     "\n",
-    "- With dask where chunking and parallel execution are applied automatically for us, we can process the data faster than traditional Pandas method at 35.7 s. It also takes up the least amount of memory during peak usage at 3658.82 MiB, that is only around 50% of what the traditional Pandas method consumes."
+    "- With dask where chunking and parallel execution are applied automatically for us, we can process the data faster than traditional Pandas method at 36.8 s. It also takes up the least amount of memory during peak usage at 3470.72 MiB, that is only around 50% of what the traditional Pandas method consumes."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b0eadda7",
+   "id": "suspected-affiliate",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15b401bc",
+   "id": "sudden-hacker",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size\n",
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "42b190f0",
+   "id": "smart-empty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1e77b935",
+   "id": "isolated-township",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "91a59895",
+   "id": "focused-statement",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "45c4e508",
+   "id": "affected-skating",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6a4ab5ba",
+   "id": "electric-railway",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c73a12a8",
+   "id": "working-strain",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04b154a6",
+   "id": "brief-timer",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f0064824",
+   "id": "economic-internship",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "016255d5",
+   "id": "empty-color",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8287762f",
+   "id": "lined-nepal",
+   "metadata": {},
+   "source": [
+    "**Comment:** \n",
+    "\n",
+    "Besides 1.7s and 2.4s for the two respective EDA, the remaining wall time was spent to read in the .parquet file (12.6 - 1.7 - 2.4 = 8.5 s). Given its size, this is a decent performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "executive-parking",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1132,10 +1142,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81725ae0",
+   "id": "formal-oriental",
    "metadata": {},
    "source": [
-    "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
+    "* Given the size of this data is quite large, the time it took us to run the code is quite long. We overcome this by apply more efficient loading method as well as converted the data to more advanced format like .parquet\n",
     "* There are different file syntax between Windows and macOS that we have managed to debug successfully.\n",
     "* The `rpy2` is another obstacle given two of our members could not run this extension in Jupyter Notebooks despite many debugging attempts. In the end, we decide to test run the R code in RStudios first and then paste it in the Jupyter Notebooks and ask the other member with the most robust machine to run it in Jupyter Notebooks. "
    ]
@@ -1157,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.6"
   },
   "toc-autonumbering": false
  },
