--- a/notebooks/Milestone2.ipynb
+++ b/notebooks/Milestone2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7da6c891",
+   "id": "b86e98bb",
    "metadata": {},
    "source": [
     "# DSCI 525 - Web and Cloud Computing"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96502a4",
+   "id": "c7511c58",
    "metadata": {},
    "source": [
     "Milestone 2: The purpose of this milestone is to move our data to the cloud and get comfortable working there."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7618163d",
+   "id": "43f33793",
    "metadata": {},
    "source": [
     "## Milestone 2 checklist  "
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e79688c1",
+   "id": "086071e1",
    "metadata": {},
    "source": [
     "- [X] Setup your EC2 instance with JupyterHub.  \n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecede760",
+   "id": "b5fcab4d",
    "metadata": {},
    "source": [
     "### 1. Setup your EC2 instance"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2735c4dc",
+   "id": "b902174f",
    "metadata": {},
    "source": [
     "rubric={correctness:20}"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a0058a",
+   "id": "13c56bc1",
    "metadata": {},
    "source": [
     "Follow the instructions shown during the lecture to set up your EC2 instance. You can use [this](https://tljh.jupyter.org/en/latest/install/amazon.html ) as your reference, but please make sure you follow the below instructions.\n",
@@ -105,7 +105,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "96153a9f",
+   "id": "4380391e",
    "metadata": {},
    "source": [
     "#### Please attach this screen shots from your group for grading.\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9543b7f5",
+   "id": "60d139a8",
    "metadata": {},
    "source": [
     "### 2. Setup your JupyterHub"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c55c8b0",
+   "id": "7987e3c7",
    "metadata": {},
    "source": [
     "rubric={correctness:20}"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a822a8f",
+   "id": "a7f89b06",
    "metadata": {},
    "source": [
     "2.1) Under description, check for \"IPv4 Public IP\" and paste the IP address in your browser for your JupyterHub.\n",
@@ -150,7 +150,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "bdbd4e11",
+   "id": "dde9c45a",
    "metadata": {},
    "source": [
     "#### Please attach this screen shots from your group for grading\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c35551a",
+   "id": "1a8c24c9",
    "metadata": {},
    "source": [
     "### 3. Setup the server "
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddffaca",
+   "id": "51eba039",
    "metadata": {},
    "source": [
     "rubric={correctness:20}"
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea5cdb5c",
+   "id": "32da02ca",
    "metadata": {},
    "source": [
     "3.1) Login in to the server (instance). The person who spins up the EC2 instance will only have access to the server as he only got the private key. If someone else wants to log in to that instance, you need to get hold of that private key (  Refer 1.10 ). Need to know more ? [Click here](https://github.ubc.ca/MDS-2020-21/DSCI_521_platforms-dsci_instructors/blob/master/lectures/7-ssh-filenames-project-organization.ipynb)\n",
@@ -214,7 +214,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "9898b197",
+   "id": "47fd5224",
    "metadata": {},
    "source": [
     "#### Please attach this screen shots from your group for grading\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd20b3fe",
+   "id": "a882ac7a",
    "metadata": {},
    "source": [
     "### 4. Get the data what we wrangled in our first milestone. "
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "546c5d13",
+   "id": "8bfcb68e",
    "metadata": {},
    "source": [
     "You have to install the packages that are needed. Refer this TLJH [document]( https://tljh.jupyter.org/en/latest/howto/env/user-environment.html).Refer ```pip``` section.\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0473a17c",
+   "id": "05b26481",
    "metadata": {},
    "source": [
     "As in the last milestone, we looked at getting the data transferred from Python to R, and we have different solutions. Henceforth, I uploaded the parquet file format, which we can use moving forward."
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f587a1d3",
+   "id": "05faf0c3",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c76dd9",
+   "id": "3969d662",
    "metadata": {},
    "source": [
     "Rememeber here we gave the folder that we created in Step 3.2 as we made it available for all the users in a group."
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1fe81369",
+   "id": "97639458",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d5dddc01",
+   "id": "fa72120c",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "716e8d62",
+   "id": "a32d2da5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d74b9dcc",
+   "id": "f6abe992",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5cd8af8",
+   "id": "24294b4c",
    "metadata": {},
    "source": [
     "### 5. Setup your S3 bucket and move data"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "953eb529",
+   "id": "9a8c0fb0",
    "metadata": {},
    "source": [
     "rubric={correctness:20}"
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab7bb2e7",
+   "id": "3077c546",
    "metadata": {},
    "source": [
     "5.1) Get comfortable with S3 UI. Go from the AWS console.\n",
@@ -429,19 +429,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6cda907",
+   "id": "2f72d76a",
    "metadata": {},
    "source": [
     "#### Please attach this screen shots from your group for grading\n",
     "\n",
     "Make sure it has 3 objects.\n",
     "\n",
-    "https://github.ubc.ca/MDS-2020-21/DSCI_525_web-cloud-comp_students/blob/master/images/4_result.png"
+    "https://github.ubc.ca/MDS-2020-21/DSCI_525_web-cloud-comp_students/blob/master/images/4_result.png\n",
+    "\n",
+    "![s3](s3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "663dff40",
+   "id": "641fecad",
    "metadata": {},
    "source": [
     "### 6. Wrangle the data in preparation for machine learning"
@@ -449,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "421ede31",
+   "id": "feca73be",
    "metadata": {},
    "source": [
     "rubric={correctness:20}"
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f4bf20",
+   "id": "f707683c",
    "metadata": {},
    "source": [
     "Our data currently covers all of NSW, but say that our client wants us to create a machine learning model to predict rainfall over Sydney only. There's a bit of wrangling that needs to be done for that:\n",
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73c9214",
+   "id": "793904ab",
    "metadata": {},
    "source": [
     "6.1) Get the data from s3\n",
@@ -496,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "57b53316",
+   "id": "e99b6687",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "bb801a5f",
+   "id": "da82cd4e",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1396f51a",
+   "id": "19a5f4a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31b17b09",
+   "id": "91a03c2e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -654,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38666e4",
+   "id": "25fa0f92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -662,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c0e819e",
+   "id": "9df18b6d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -670,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aea04b85",
+   "id": "21914e68",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -678,14 +680,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e893336",
+   "id": "c5126d0a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "72929f12",
+   "id": "1a8960f6",
    "metadata": {},
    "source": [
     "How the final file format looks like\n",
@@ -697,14 +699,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d68d15",
+   "id": "3d909951",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1d3ce468",
+   "id": "2780ca18",
    "metadata": {},
    "source": [
     "(***OPTIONAL, no bonus points***) Want to check out how much time it will take to read a CSV file instead of parquet from s3?\n",
@@ -718,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40895702",
+   "id": "d9ce6fab",
    "metadata": {},
    "outputs": [],
    "source": []
