Minor edit on score label, change hyperparameter

--- a/notebooks/Milestone3-Task3.ipynb
+++ b/notebooks/Milestone3-Task3.ipynb
@@ -776,7 +776,7 @@
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(min_samples_leaf=100, n_jobs=-1, random_state=100)"
+       "RandomForestRegressor(max_depth=10, n_jobs=-1, random_state=100)"
       ]
      },
      "execution_count": 11,
@@ -791,7 +791,7 @@
     "X_train = train_df.drop(columns =['Observed'])\n",
     "y_train = train_df['Observed']\n",
     "\n",
-    "model = RandomForestRegressor(n_jobs = -1, random_state = 100, min_samples_leaf = 100)\n",
+    "model = RandomForestRegressor(n_jobs = -1, random_state = 100, max_depth = 10)\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -852,19 +852,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>fit_time</th>\n",
-       "      <td>47.779 (+/- 18.651)</td>\n",
+       "      <td>46.419 (+/- 18.416)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>score_time</th>\n",
-       "      <td>0.202 (+/- 0.075)</td>\n",
+       "      <td>0.108 (+/- 0.005)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test_score</th>\n",
-       "      <td>-8.068 (+/- 0.387)</td>\n",
+       "      <td>-8.111 (+/- 0.425)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_score</th>\n",
-       "      <td>-7.852 (+/- 0.095)</td>\n",
+       "      <td>-7.435 (+/- 0.057)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -872,10 +872,10 @@
       ],
       "text/plain": [
        "                   Random forest\n",
-       "fit_time     47.779 (+/- 18.651)\n",
-       "score_time     0.202 (+/- 0.075)\n",
-       "test_score    -8.068 (+/- 0.387)\n",
-       "train_score   -7.852 (+/- 0.095)"
+       "fit_time     46.419 (+/- 18.416)\n",
+       "score_time     0.108 (+/- 0.005)\n",
+       "test_score    -8.111 (+/- 0.425)\n",
+       "train_score   -7.435 (+/- 0.057)"
       ]
      },
      "execution_count": 13,
@@ -901,7 +901,7 @@
    "source": [
     "X_test = test_df.drop(columns =['Observed'])\n",
     "y_test = test_df['Observed']\n",
-    "y_pred = model.predict(X_test)"
+    "y_pred = model.predict(X_test) # obtain predictions from test set"
    ]
   },
   {
@@ -1000,7 +1000,7 @@
        "      <td>0.002969</td>\n",
        "      <td>0.331308</td>\n",
        "      <td>0.244659</td>\n",
-       "      <td>3.111556</td>\n",
+       "      <td>2.691840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1934-05-30</th>\n",
@@ -1024,7 +1024,7 @@
        "      <td>2.818088</td>\n",
        "      <td>0.609379</td>\n",
        "      <td>0.895293</td>\n",
-       "      <td>3.457102</td>\n",
+       "      <td>3.514946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1969-12-21</th>\n",
@@ -1048,7 +1048,7 @@
        "      <td>0.009682</td>\n",
        "      <td>0.391426</td>\n",
        "      <td>1.029707</td>\n",
-       "      <td>2.916383</td>\n",
+       "      <td>2.730102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1988-09-11</th>\n",
@@ -1072,7 +1072,7 @@
        "      <td>0.022481</td>\n",
        "      <td>0.031245</td>\n",
        "      <td>1.950727</td>\n",
-       "      <td>1.778334</td>\n",
+       "      <td>2.256351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1951-04-21</th>\n",
@@ -1096,7 +1096,7 @@
        "      <td>3.127725</td>\n",
        "      <td>0.433837</td>\n",
        "      <td>0.074222</td>\n",
-       "      <td>2.879029</td>\n",
+       "      <td>2.576357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1144,7 +1144,7 @@
        "      <td>0.596161</td>\n",
        "      <td>0.004774</td>\n",
        "      <td>2.983357</td>\n",
-       "      <td>2.058428</td>\n",
+       "      <td>2.319533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1967-03-18</th>\n",
@@ -1168,7 +1168,7 @@
        "      <td>0.526623</td>\n",
        "      <td>1.989359</td>\n",
        "      <td>3.353520</td>\n",
-       "      <td>2.676903</td>\n",
+       "      <td>2.882740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1906-06-11</th>\n",
@@ -1192,7 +1192,7 @@
        "      <td>0.108319</td>\n",
        "      <td>2.484027</td>\n",
        "      <td>0.002273</td>\n",
-       "      <td>3.446283</td>\n",
+       "      <td>3.401401</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1891-07-31</th>\n",
@@ -1216,7 +1216,7 @@
        "      <td>0.000734</td>\n",
        "      <td>1.322548</td>\n",
        "      <td>0.035516</td>\n",
-       "      <td>2.997412</td>\n",
+       "      <td>2.775082</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1986-12-22</th>\n",
@@ -1240,7 +1240,7 @@
        "      <td>0.000087</td>\n",
        "      <td>5.307963</td>\n",
        "      <td>0.921632</td>\n",
-       "      <td>2.962615</td>\n",
+       "      <td>3.408570</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1306,17 +1306,17 @@
        "\n",
        "            SAM0-UNICON   TaiESM1  Ensemble  \n",
        "time                                         \n",
-       "1959-02-10     0.331308  0.244659  3.111556  \n",
-       "1934-05-30     0.609379  0.895293  3.457102  \n",
-       "1969-12-21     0.391426  1.029707  2.916383  \n",
-       "1988-09-11     0.031245  1.950727  1.778334  \n",
-       "1951-04-21     0.433837  0.074222  2.879029  \n",
+       "1959-02-10     0.331308  0.244659  2.691840  \n",
+       "1934-05-30     0.609379  0.895293  3.514946  \n",
+       "1969-12-21     0.391426  1.029707  2.730102  \n",
+       "1988-09-11     0.031245  1.950727  2.256351  \n",
+       "1951-04-21     0.433837  0.074222  2.576357  \n",
        "...                 ...       ...       ...  \n",
-       "2001-09-19     0.004774  2.983357  2.058428  \n",
-       "1967-03-18     1.989359  3.353520  2.676903  \n",
-       "1906-06-11     2.484027  0.002273  3.446283  \n",
-       "1891-07-31     1.322548  0.035516  2.997412  \n",
-       "1986-12-22     5.307963  0.921632  2.962615  \n",
+       "2001-09-19     0.004774  2.983357  2.319533  \n",
+       "1967-03-18     1.989359  3.353520  2.882740  \n",
+       "1906-06-11     2.484027  0.002273  3.401401  \n",
+       "1891-07-31     1.322548  0.035516  2.775082  \n",
+       "1986-12-22     5.307963  0.921632  3.408570  \n",
        "\n",
        "[9198 rows x 26 columns]"
       ]
@@ -1328,7 +1328,7 @@
    ],
    "source": [
     "predictions = X_test.copy()\n",
-    "predictions['Ensemble'] = y_pred.tolist()\n",
+    "predictions['Ensemble'] = y_pred.tolist() # Add ensemble model results in prediction dataframe\n",
     "predictions"
    ]
   },
@@ -1344,17 +1344,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores = {}\n",
-    "for col in predictions.columns:\n",
-    "    scores[col] = mean_squared_error(y_test, predictions[col], squared=False)*(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1367,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>RMSE</th>\n",
+       "      <th>Negative RMSE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1484,49 +1473,53 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ensemble</th>\n",
-       "      <td>-8.615471</td>\n",
+       "      <td>-8.667534</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       RMSE\n",
-       "ACCESS-CM2       -11.038999\n",
-       "ACCESS-ESM1-5    -10.695305\n",
-       "AWI-ESM-1-1-LR   -10.996616\n",
-       "BCC-CSM2-MR      -10.761381\n",
-       "BCC-ESM1         -10.615578\n",
-       "CMCC-CM2-HR4     -10.643204\n",
-       "CMCC-CM2-SR5     -11.480614\n",
-       "CMCC-ESM2        -11.246493\n",
-       "CanESM5          -11.151318\n",
-       "EC-Earth3-Veg-LR -10.453606\n",
-       "FGOALS-g3         -9.687788\n",
-       "GFDL-CM4         -10.511682\n",
-       "INM-CM4-8        -11.451635\n",
-       "INM-CM5-0        -12.250223\n",
-       "KIOST-ESM         -9.600480\n",
-       "MIROC6           -11.352976\n",
-       "MPI-ESM-1-2-HAM  -10.932004\n",
-       "MPI-ESM1-2-HR     -9.969823\n",
-       "MPI-ESM1-2-LR    -10.260886\n",
-       "MRI-ESM2-0        -9.922795\n",
-       "NESM3             -9.978137\n",
-       "NorESM2-LM       -10.410145\n",
-       "NorESM2-MM       -10.939740\n",
-       "SAM0-UNICON      -11.678749\n",
-       "TaiESM1          -11.528083\n",
-       "Ensemble          -8.615471"
+       "                  Negative RMSE\n",
+       "ACCESS-CM2           -11.038999\n",
+       "ACCESS-ESM1-5        -10.695305\n",
+       "AWI-ESM-1-1-LR       -10.996616\n",
+       "BCC-CSM2-MR          -10.761381\n",
+       "BCC-ESM1             -10.615578\n",
+       "CMCC-CM2-HR4         -10.643204\n",
+       "CMCC-CM2-SR5         -11.480614\n",
+       "CMCC-ESM2            -11.246493\n",
+       "CanESM5              -11.151318\n",
+       "EC-Earth3-Veg-LR     -10.453606\n",
+       "FGOALS-g3             -9.687788\n",
+       "GFDL-CM4             -10.511682\n",
+       "INM-CM4-8            -11.451635\n",
+       "INM-CM5-0            -12.250223\n",
+       "KIOST-ESM             -9.600480\n",
+       "MIROC6               -11.352976\n",
+       "MPI-ESM-1-2-HAM      -10.932004\n",
+       "MPI-ESM1-2-HR         -9.969823\n",
+       "MPI-ESM1-2-LR        -10.260886\n",
+       "MRI-ESM2-0            -9.922795\n",
+       "NESM3                 -9.978137\n",
+       "NorESM2-LM           -10.410145\n",
+       "NorESM2-MM           -10.939740\n",
+       "SAM0-UNICON          -11.678749\n",
+       "TaiESM1              -11.528083\n",
+       "Ensemble              -8.667534"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(scores, index = ['RMSE']).T"
+    "scores = {}\n",
+    "for col in predictions.columns:\n",
+    "    scores[col] = mean_squared_error(y_test, predictions[col], squared=False)*(-1)\n",
+    "    \n",
+    "pd.DataFrame(scores, index = ['Negative RMSE']).T"
    ]
   },
   {
