--- a/notebooks/Milestone3-Task4.ipynb
+++ b/notebooks/Milestone3-Task4.ipynb
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "aws_credentials = {\"key\": \"AKIATB63UHM3JXUFJBTD\",\"secret\": \"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\"}\n",
+    "aws_credentials = {\"key\": \"\",\"secret\": \"\"}\n",
     "## here 100 data points for testing the code\n",
     "pandas_df = pd.read_csv(\"s3://mds-s3-student74/output/ml_data_SYD.csv\", storage_options=aws_credentials, index_col=0, parse_dates=True).iloc[:100].dropna()\n",
     "feature_cols = list(pandas_df.drop(columns=\"Observed\").columns)"
