finish task 3, add screenshot to image folder and notebooks

--- a/notebooks/Milestone3-Task3.ipynb
+++ b/notebooks/Milestone3-Task3.ipynb
@@ -342,7 +342,7 @@
     "# 1) Read the data CSV from your s3 bucket\n",
     "## You could download it from your bucket, or you can use the file that I have in my bucket. \n",
     "## You should be able to access it from my bucket using your key and secret\n",
-    "aws_credentials ={\"key\": \"<your_key>\",\"secret\": \"<your_secret>\"} \n",
+    "aws_credentials ={\"key\": \"AKIATB63UHM3BJ6HHBMJ\",\"secret\": \"+3kXxVQjVbETWRdcPbZB4BWCVa6J8yvlSH5HzkQC\"} \n",
     "df = pd.read_csv(\"s3://mds-s3-student74/output/ml_data_SYD.csv\", index_col=0, parse_dates=True, storage_options=aws_credentials)\n",
     "df.head()"
    ]
@@ -852,11 +852,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>fit_time</th>\n",
-       "      <td>46.419 (+/- 18.416)</td>\n",
+       "      <td>46.185 (+/- 18.283)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>score_time</th>\n",
-       "      <td>0.108 (+/- 0.005)</td>\n",
+       "      <td>0.123 (+/- 0.020)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test_score</th>\n",
@@ -872,8 +872,8 @@
       ],
       "text/plain": [
        "                   Random forest\n",
-       "fit_time     46.419 (+/- 18.416)\n",
-       "score_time     0.108 (+/- 0.005)\n",
+       "fit_time     46.185 (+/- 18.283)\n",
+       "score_time     0.123 (+/- 0.020)\n",
        "test_score    -8.111 (+/- 0.425)\n",
        "train_score   -7.435 (+/- 0.057)"
       ]
@@ -1559,44 +1559,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 47s, sys: 51.7 ms, total: 1min 47s\n",
-      "Wall time: 1min 47s\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(max_depth=20)"
+       "RandomForestRegressor(max_depth=5)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = RandomForestRegressor(n_estimators=100, max_depth=20)\n",
+    "model = RandomForestRegressor(n_estimators=100, max_depth=5)\n",
     "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train RMSE: 2.45\n",
-      " Test RMSE: 3.31\n"
+      "Train RMSE: 7.89\n",
+      " Test RMSE: 8.65\n"
      ]
     }
    ],
@@ -1607,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1608,7 @@
        "['model.joblib']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,10 +1627,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Attribution: https://stackoverflow.com/questions/15085864/how-to-upload-a-file-to-directory-in-s3-bucket-using-boto\n",
+    "\n",
+    "import boto3\n",
+    "\n",
+    "session = boto3.Session(\n",
+    "    aws_access_key_id = aws_credentials['key'],\n",
+    "    aws_secret_access_key = aws_credentials['secret'],\n",
+    ")\n",
+    "s3 = session.resource('s3')\n",
+    "# Filename - File to upload\n",
+    "# Bucket - Bucket to upload to (the top level directory under AWS S3)\n",
+    "# Key - S3 object name (can contain subdirectories). If not specified then file_name is used\n",
+    "s3.meta.client.upload_file(Filename='model.joblib', Bucket='mds-s3-student74', Key='model.joblib')"
+   ]
   }
  ],
  "metadata": {
@@ -1657,7 +1663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
