remove credential and add link to screenshot

--- a/notebooks/Milestone3-Task3.ipynb
+++ b/notebooks/Milestone3-Task3.ipynb
@@ -342,7 +342,7 @@
     "# 1) Read the data CSV from your s3 bucket\n",
     "## You could download it from your bucket, or you can use the file that I have in my bucket. \n",
     "## You should be able to access it from my bucket using your key and secret\n",
-    "aws_credentials ={\"key\": \"AKIATB63UHM3BJ6HHBMJ\",\"secret\": \"+3kXxVQjVbETWRdcPbZB4BWCVa6J8yvlSH5HzkQC\"} \n",
+    "aws_credentials ={\"key\": \"<your key>\",\"secret\": \"<your secret>\"} \n",
     "df = pd.read_csv(\"s3://mds-s3-student74/output/ml_data_SYD.csv\", index_col=0, parse_dates=True, storage_options=aws_credentials)\n",
     "df.head()"
    ]
@@ -1663,7 +1663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
