--- a/notebooks/Milestone4.ipynb
+++ b/notebooks/Milestone4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "frequent-commander",
+   "id": "reasonable-heating",
    "metadata": {},
    "source": [
     "# DSCI 525 - Web and Cloud Computing"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valued-saint",
+   "id": "equipped-leonard",
    "metadata": {},
    "source": [
     "***Milestone 4:*** In this milestone, you will deploy the machine learning model you trained in milestone 3."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demographic-testing",
+   "id": "chicken-identity",
    "metadata": {},
    "source": [
     "Milestone 4 checklist :\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "public-coordinate",
+   "id": "quick-assets",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "important-harbor",
+   "id": "comfortable-memorabilia",
    "metadata": {},
    "source": [
     "## 1. Develop your API\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handmade-superintendent",
+   "id": "important-bacon",
    "metadata": {},
    "source": [
     "You probably got how to set up primary URL endpoints from the ```sampleproject.ipynb notebook``` and have them process and return some data. Here we are going to create a new endpoint that accepts a POST request of the features required to run the machine learning model that you trained and saved in last milestone (i.e., a user will post the predictions of the 25 climate model rainfall predictions, i.e., features,  needed to predict with your machine learning model). Your code should then process this data, use your model to make a prediction, and return that prediction to the user. To get you started with all this, I've given you a template which you should fill out to set up this functionality:\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "molecular-reality",
+   "id": "imported-exhibition",
    "metadata": {},
    "source": [
     "## 2. Deploy your API\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corrected-hammer",
+   "id": "interested-station",
    "metadata": {},
    "source": [
     "Once your API (app.py) is working we're ready to deploy it! For this, do the following:\n",
@@ -148,6 +148,7 @@
     "        - Install packages (there might be others): \n",
     "            conda install flask scikit-learn joblib\n",
     "            \n",
+    "            export FLASK_APP=app.py\n",
     "            pip3 install joblib\n",
     "            pip3 install numpy\n",
     "            pip3 install scikit-learn\n",
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quality-translator",
+   "id": "miniature-essex",
    "metadata": {},
    "source": [
     "## 3. Summarize your journey from Milestone 1 to Milestone 4\n",
@@ -186,14 +187,14 @@
     }
    },
    "cell_type": "markdown",
-   "id": "reflected-bridges",
+   "id": "ordinary-liabilities",
    "metadata": {},
    "source": [
     "## 4. Submission instructions\n",
     "rubric={mechanics:5}\n",
     "\n",
     "In the textbox provided on Canvas please put a link where TAs can find the following-\n",
-    "- [ ] This notebook with solution to ```1 & 3```\n",
+    "- [ ] This notebook with solution to ```1 & 3```: https://github.com/UBC-MDS/525_group7/blob/main/notebooks/Milestone4.ipynb\n",
     "- [X] Screenshot from \n",
     "    - [X] Output after trying curl. Here is a [sample](https://github.ubc.ca/MDS-2020-21/DSCI_525_web-cloud-comp_students/blob/master/Milestones/milestone4/images/curl_deploy_sample.png). This is just an example; your input/output doesn't have to look like this, you can design the way you like. But at a minimum, it should show your prediction value.\n",
     "    \n",
